--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
 
     <string name="menu_home">Начало</string>
     <string name="menu_gallery">Програма</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_slideshow">Контакти</string>
 
 </resources>
